--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,9 +15,10 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  flock:
-    path: ../flock
+  flock: ^0.1.0
   uuid: any
+  sensors: ^0.3.5
+  rxdart: ^0.20.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -26,8 +27,6 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  sensors: ^0.3.5
-  rxdart: ^0.20.0
 
 
 # For information on the generic Dart part of this file, see the
